fix(regression): instruct the browser that the web app uses dark mode (which fixes some edge-case issues)

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,7 @@ html {
   height: 100vh;
   overflow: hidden;
   color: white;
+  prefers-color-scheme: dark;
 }
 
 html.disable-assets {
